# Eng_Rus_Dict_RBT

./: .gitignore  README.md
A&DS/: CMakeLists.txt  README.md  main.cpp
A&DS/cmake/icon/: app_icon.rc
A&DS/data/: Dictionary.json  Dictionary1.json  DictionaryT.json
A&DS/headers/: Dict.h  Exceptions.h  MyJson.h  RBT.h  Structs.h
A&DS/src/: Dict.cpp  MyJson.cpp  RBT.cpp  Structs.cpp
A&DS/tests/: Tests.cpp  Tests.h
TP/: CMakeLists.txt  README.md  main.cpp
TP/cmake/icon/: app_icon.rc
TP/data/: DictionaryT.json
TP/headers/: Dict.h  Exceptions.h  MyJson.h
TP/src/: Dict.cpp  MyJson.cpp  Tests.cpp
